Fixed center alignment on brakpoint > xs

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,9 @@ body {
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 50px;
 }
 
